<resources>
    <string name="app_name">Books</string>
    <string name="data_error_message">No Internet Connection</string>
    <string name="sub_title">Sub Title</string>
    <string name="title">Title</string>
    <string name="publisher">Publisher</string>
    <string name="publishedDate">PublishedDate</string>
    <string name="Search">Search</string>
    <string name="et_Tile">Enter title</string>
    <string name="et_author">Enter author</string>
    <string name="et_ISBN">Enter ISBN</string>
    <string name="et_publsher">Enter publisher</string>
    <string name="advance_search">Advance search</string>
</resources>
