<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="100">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_weight="15"
        android:padding="8dp"
        app:srcCompat="@drawable/book_open_icon" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="85"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/title"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_title"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/tvPublisher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:text="@string/publisher"
                android:textColor="@color/colorDark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvPublishedDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="30"
                android:text="@string/publishedDate"
                android:textAlignment="textEnd"
                android:textColor="@color/colorDark"
                android:textSize="15sp" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>